--- a/Slides/exercise 2/Exercise 2.ipynb
+++ b/Slides/exercise 2/Exercise 2.ipynb
@@ -52,7 +52,9 @@
     "## Padlet\n",
     "\n",
     "Want me to go through something during classes? or find something hard to understand? Suggestions for exercise classes? Write it on: https://ucph.padlet.org/sebastianhonore/mqeo0l6lezrfrola. You can also upvote comments to signify their importance. \n",
-    "<img src=\"giphy.gif\" width=\"500\" align=\"center\">"
+    "<center>\n",
+    "<img src=\"giphy.gif\" width=\"500\" align=\"center\">\n",
+    "<center/>"
    ]
   },
   {
