--- a/Slides/exercise 4/Exercise 4.ipynb
+++ b/Slides/exercise 4/Exercise 4.ipynb
@@ -200,36 +200,12 @@
    },
    "source": [
     "# 3.3 model continued\n",
-    "What about the taxes on housing, $\\tau(p_h,\\tilde{p}_h)$ ? Hint: set $p$ numeraire. find $\\tilde{p}$ from eq.2  and calculate taxes. Remember not to include mortgage costs. Note that when we define $p_h=h$ it implies that $\\tau(\\cdot)$ is a function of $h$ and model parameters. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "suspended-default",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "p = 1 #numeraire \n",
+    "What about the taxes on housing, $\\tau(p_h,\\tilde{p}_h)$? \n",
+    "- Note that when we define $p_h = h$ it implies that $\\tau(\\cdot)$ is a function of $h$ and model parameters. \n",
     "\n",
-    "def tau(h, mp, p):\n",
-    "    \"\"\" Calculates total housing taxes when choosing h\n",
-    "    \n",
-    "    Args:\n",
+    "- When you define the model it can be wise to set $p$ numeraire. \n",
     "\n",
-    "        h (float): housing \n",
-    "        mp (dict): model parameters. \n",
-    "        p (float): price index of housing\n",
-    "        \n",
-    "    Returns:\n",
-    "        (float): total taxes paid for a house of quality h\n",
-    "    \"\"\"\n",
-    "    # p_tilde = ?\n",
-    "    return mp['tau_g']*p_tilde + mp['tau_p']*(max(p_tilde - mp['p_bar'], 0))"
+    "- Find $\\tilde{p}$ from eq.2 and calculate housing taxes. Mortgage costs not included here!"
    ]
   },
   {
@@ -299,7 +275,11 @@
   {
    "cell_type": "markdown",
    "id": "fifty-circulation",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## 4.3 Upload/push to a repository\n",
     "1. When you have created a repo clone it to your computer as usual. \n",
@@ -314,12 +294,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "significant-ferry",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "offensive-feeding",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## 5. Problemset 2\n",
+    "Work with problemset 2 today. It is relatively long so focus on following problems: \n",
+    "- 2.3\n",
+    "- 2.5\n",
+    "- 2.6\n",
+    "- 3\n",
+    "\n",
+    "Please go to your channel and ask for help in `general`.  "
+   ]
   }
  ],
  "metadata": {
